--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     // Bird image (replace with a valid path or use a simpler path for testing)
     const birdImage = new Image();
-    birdImage.src = 'images/bird.jpg'; // Replace this with a simple image path (check path)
+    birdImage.src = 'bird.jpg'; // Replace this with a simple image path (check path)
 
     // Ensure the image is fully loaded before starting the game
     birdImage.onload = function() {
