--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
       ctx.font = '30px Arial';
       ctx.fillText('Game Over!', canvas.width / 2 - 80, canvas.height / 2 - 30);
       ctx.fillText('Score: ' + score, canvas.width / 2 - 50, canvas.height / 2 + 10);
+      showRestartButton(); // Show the restart button after game over
     }
 
     // Draw function to update game
@@ -288,4 +289,3 @@
   </script>
 </body>
 </html>
-
