--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       background-color: #70c5ce;
       font-family: Arial, sans-serif;
       overflow: hidden;
+      position: relative;
     }
     canvas {
       border: 2px solid black;
@@ -28,7 +29,7 @@
       cursor: pointer;
       display: none;
       opacity: 0;
-      transition: opacity 0.5s;
+      transition: opacity 0.5s ease;
       z-index: 100;
     }
     @media (max-width: 600px) {
@@ -45,12 +46,14 @@
   <button id="restartButton">Restart Game</button>
 
   <script>
+    // Setup canvas
     const canvas = document.getElementById('gameCanvas');
     const ctx = canvas.getContext('2d');
 
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
 
+    // Game Constants
     const GRAVITY = 0.10;
     const FLAP_STRENGTH = -3;
     const SPAWN_RATE = 100;
@@ -60,6 +63,7 @@
     const INITIAL_PIPE_GAP = 200;
     const PIPE_GAP_DECREASE = 10;
 
+    // Game variables
     let birdY = canvas.height / 2;
     let birdVelocity = 0;
     let pipes = [];
@@ -69,17 +73,20 @@
     let countdownTimer = 3;
     let countdownInterval;
 
+    // Bird image
     const birdImage = new Image();
-    birdImage.src = 'bird.jpg'; 
+    birdImage.src = 'bird.jpg'; // Add your bird image path here
 
+    // Ensure the bird image is loaded before starting the game
     birdImage.onload = function() {
-      showStartButton();
+      showStartButton();  // Show start button once the image is loaded
     };
 
     birdImage.onerror = function() {
-      alert("Error loading image. Please check the path.");
+      alert("Error loading bird image. Please check the path.");
     };
 
+    // Bird object
     const bird = {
       x: 50,
       y: birdY,
@@ -90,13 +97,17 @@
           ctx.drawImage(birdImage, this.x, this.y, this.width, this.height);
         } else {
           ctx.fillStyle = 'yellow';
-          ctx.fillRect(this.x, this.y, this.width, this.height); 
+          ctx.fillRect(this.x, this.y, this.width, this.height);  // Fallback to a rectangle for the bird
         }
       },
       flap: function() {
         birdVelocity = FLAP_STRENGTH;
       }
     };
+
+    // Pipe object
+    let pipeSpeed = INITIAL_PIPE_SPEED;
+    let pipeGap = INITIAL_PIPE_GAP;
 
     function Pipe(lastPipeX) {
       this.width = 50;
@@ -106,63 +117,78 @@
 
       this.draw = function() {
         ctx.fillStyle = 'green';
-        ctx.fillRect(this.x, 0, this.width, this.height); 
-        ctx.fillRect(this.x, this.height + this.gap, this.width, canvas.height - (this.height + this.gap)); 
+        ctx.fillRect(this.x, 0, this.width, this.height);  // Upper pipe
+        ctx.fillRect(this.x, this.height + this.gap, this.width, canvas.height - (this.height + this.gap));  // Lower pipe
       };
 
       this.update = function() {
-        this.x -= pipeSpeed;
+        this.x -= pipeSpeed;  // Move pipes leftwards
       };
     }
 
+    // Update game difficulty based on score
     function updateGameDifficulty() {
-      if (score % 5 === 0) {
-        pipeSpeed += PIPE_SPEED_INCREMENT;
+      if (score % 5 === 0) {  // Every 5 points
+        pipeSpeed += PIPE_SPEED_INCREMENT;  // Increase pipe speed
         if (pipeGap > 50) {
-          pipeGap -= PIPE_GAP_DECREASE;
+          pipeGap -= PIPE_GAP_DECREASE;  // Decrease the gap between pipes
         }
       }
     }
 
+    // Show the start button
     function showStartButton() {
       document.getElementById('startButton').style.display = 'block';
+      document.getElementById('startButton').style.opacity = '1';
     }
 
+    // Show the restart button
     function showRestartButton() {
       document.getElementById('restartButton').style.display = 'block';
+      document.getElementById('restartButton').style.opacity = '1';
     }
 
+    // Hide buttons
     function hideButtons() {
       document.getElementById('startButton').style.display = 'none';
       document.getElementById('restartButton').style.display = 'none';
     }
 
+    // Display game over message
     function gameOverMessage() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.clearRect(0, 0, canvas.width, canvas.height);  // Clear the canvas
       ctx.fillStyle = 'black';
       ctx.font = '30px Arial';
       ctx.fillText('Game Over!', canvas.width / 2 - 80, canvas.height / 2 - 30);
+
       ctx.font = '20px Arial';
       ctx.fillText('Score: ' + score, canvas.width / 2 - 50, canvas.height / 2 + 10);
-      showRestartButton();
+
+      showRestartButton();  // Show restart button after game over
     }
 
+    // Main draw function
     function draw() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
-      bird.draw();
+
+      bird.draw();  // Draw bird
+
+      // Update bird position
       birdVelocity += GRAVITY;
       bird.y += birdVelocity;
-      
+
+      // Prevent bird from going off screen
       if (bird.y < 0) bird.y = 0;
       if (bird.y + bird.height > canvas.height) {
         bird.y = canvas.height - bird.height;
         if (!gameOver) {
           gameOver = true;
-          gameOverMessage();
+          gameOverMessage();  // Show game over message
           return;
         }
       }
 
+      // Create pipes
       if (pipes.length === 0 || pipes[pipes.length - 1].x < canvas.width - SPAWN_RATE) {
         const lastPipeX = pipes.length > 0 ? pipes[pipes.length - 1].x : canvas.width;
         pipes.push(new Pipe(lastPipeX));
@@ -172,27 +198,31 @@
         pipes[i].draw();
         pipes[i].update();
 
+        // Check for collisions
         if (bird.x + bird.width > pipes[i].x && bird.x < pipes[i].x + pipes[i].width) {
           if (bird.y < pipes[i].height || bird.y + bird.height > pipes[i].height + pipes[i].gap) {
             gameOver = true;
-            gameOverMessage();
+            gameOverMessage();  // Display game over message
           }
         }
 
+        // Remove pipes that are off-screen
         if (pipes[i].x + pipes[i].width < 0) {
           pipes.splice(i, 1);
           score++;
-          updateGameDifficulty();
+          updateGameDifficulty();  // Increase difficulty as score increases
         }
       }
 
+      // Display score
       ctx.fillStyle = 'black';
       ctx.font = '20px Arial';
       ctx.fillText('Score: ' + score, 10, 30);
     }
 
+    // Start countdown before game begins
     function startCountdown() {
-      document.getElementById('startButton').style.display = 'none';
+      document.getElementById('startButton').style.display = 'none';  // Hide start button
       gameStarted = false;
 
       countdownInterval = setInterval(function() {
@@ -204,11 +234,12 @@
           countdownTimer--;
         } else {
           clearInterval(countdownInterval);
-          startGame();
+          startGame();  // Start game after countdown finishes
         }
       }, 1000);
     }
 
+    // Start the game
     function startGame() {
       hideButtons();
       gameStarted = true;
@@ -223,11 +254,13 @@
       gameLoop();
     }
 
+    // Restart the game
     function restartGame() {
       hideButtons();
-      startCountdown();
+      startCountdown();  // Start countdown when restarting
     }
 
+    // Listen for user input (flap)
     document.addEventListener('keydown', function(e) {
       if ((e.key === ' ' || e.key === 'ArrowUp') && !gameOver) {
         if (!gameStarted) return;
@@ -241,11 +274,13 @@
       bird.flap();
     });
 
+    // Resize canvas on window resize
     window.addEventListener('resize', function() {
       canvas.width = window.innerWidth;
       canvas.height = window.innerHeight;
     });
 
+    // Game loop
     function gameLoop() {
       if (gameStarted && !gameOver) {
         draw();
@@ -253,6 +288,7 @@
       }
     }
 
+    // Start and restart button events
     document.getElementById('startButton').addEventListener('click', function() {
       startCountdown();
     });
