--- a/index.html
+++ b/index.html
@@ -78,8 +78,14 @@
     let countdownInterval;
 
     const birdImage = new Image();
-    birdImage.src = 'bird.jpg'; 
+    const pipeImage = new Image();
+    const backgroundImage = new Image();
 
+    birdImage.src = 'bird.jpg';
+    pipeImage.src = 'pipe.jpg'; 
+    backgroundImage.src = 'background.jpg'; 
+
+    // Handle image load and display start button once bird image is loaded
     birdImage.onload = function() {
       showStartButton();  
     };
@@ -88,6 +94,12 @@
       alert("Error loading bird image. Using fallback.");
     };
 
+    // Background drawing function
+    function drawBackground() {
+      ctx.drawImage(backgroundImage, 0, 0, canvas.width, canvas.height); // Stretch background
+    }
+
+    // Bird object
     const bird = {
       x: 50,
       y: birdY,
@@ -106,21 +118,20 @@
       }
     };
 
-    let pipeSpeed = INITIAL_PIPE_SPEED;
-    let pipeGap = INITIAL_PIPE_GAP;
-
+    // Pipe constructor function
     function Pipe(lastPipeX) {
       this.width = 50;
-      this.height = Math.floor(Math.random() * (canvas.height - pipeGap)) + 50;
+      this.height = Math.floor(Math.random() * (canvas.height - INITIAL_PIPE_GAP)) + 50;
       this.x = lastPipeX + PIPE_DISTANCE;
-      this.gap = pipeGap;
+      this.gap = INITIAL_PIPE_GAP;
 
+      // Draw pipes using the pipe image
       this.draw = function() {
-        ctx.fillStyle = 'green';
-        ctx.fillRect(this.x, 0, this.width, this.height);  
-        ctx.fillRect(this.x, this.height + this.gap, this.width, canvas.height - (this.height + this.gap)); 
+        ctx.drawImage(pipeImage, this.x, 0, this.width, this.height);  // Top pipe
+        ctx.drawImage(pipeImage, this.x, this.height + this.gap, this.width, canvas.height - (this.height + this.gap)); // Bottom pipe
       };
 
+      // Update pipe position
       this.update = function() {
         this.x -= pipeSpeed;
       };
@@ -133,6 +144,7 @@
       }
     }
 
+    // Show and hide buttons
     function showStartButton() {
       document.getElementById('startButton').style.display = 'block';
       document.getElementById('startButton').style.opacity = '1';
@@ -148,6 +160,7 @@
       document.getElementById('restartButton').style.display = 'none';
     }
 
+    // Game over logic
     function gameOverMessage() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       ctx.fillStyle = 'black';
@@ -160,8 +173,10 @@
       showRestartButton();  
     }
 
+    // Main game loop function
     function draw() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      // Draw background image
+      drawBackground();
 
       bird.draw();
 
@@ -206,6 +221,7 @@
       ctx.fillText('Score: ' + score, 10, 30);
     }
 
+    // Start countdown and game logic
     function startCountdown() {
       document.getElementById('startButton').style.display = 'none';  
       gameStarted = false;
@@ -213,6 +229,7 @@
       countdownInterval = setInterval(function() {
         if (countdownTimer > 0) {
           ctx.clearRect(0, 0, canvas.width, canvas.height);
+          drawBackground(); // Re-draw background during countdown
           ctx.fillStyle = 'black';
           ctx.font = '30px Arial';
           ctx.fillText(countdownTimer, canvas.width / 2 - 15, canvas.height / 2);
@@ -243,6 +260,7 @@
       startCountdown();
     }
 
+    // Key controls for flapping
     document.addEventListener('keydown', function(e) {
       if ((e.key === ' ' || e.key === 'ArrowUp') && !gameOver) {
         if (!gameStarted) return;
@@ -250,6 +268,7 @@
       }
     });
 
+    // Touch controls for flapping
     document.addEventListener('touchstart', function(e) {
       if (!gameStarted || gameOver) return;
       bird.flap();
