--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     const pipeImage = new Image();
     const backgroundImage = new Image();
 
-    birdImage.src = 'bird.jpg';
+    birdImage.src = 'bird1.jpg';
     pipeImage.src = 'pipe.jpg'; 
     backgroundImage.src = 'background.jpg'; 
 
