--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     const backgroundImage = new Image();
 
     birdImage.src = 'bird1.jpg';
-    pipeImage.src = 'pipe.jpg'; 
+    pipeImage.src = 'pipe.png'; 
     backgroundImage.src = 'background.jpg'; 
 
     // Handle image load and display start button once bird image is loaded
